modify link to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div id="header_info">
         <div>
           <span>Page en cours : accueil >> articles</span>
-          <a href="plm.html" title="cliquez pour lire plus" id="button_forward"> <button class = "btn" type="button"> article suivant
+          <a href="plm.html" title="cliquez pour lire plus" id="button_forward"> <button class="btn" type="button">
+              article suivant
             </button></a>
         </div>
       </div>
@@ -24,7 +25,7 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li class="active"><a href="accueil.html">Accueil</a></li>
+          <li class="active"><a href="index.html">Accueil</a></li>
           <li><a href="plm.html">PLM</a></li>
           <li><a href="iot.html">IIOT</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -128,19 +129,27 @@
     </section>
 
 
-    <footer>   <!-- debut du footer-->
-  
-  <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur developpeur Industrie 4.0 </h3>
-  
-  <table  id="footer">
-<tr>
-              <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Gaelle Fougère sur LinkedIn" border="0" alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
+    <footer>
+      <!-- debut du footer-->
 
-              <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Sandrine Prévot sur LinkedIn" border="0" alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
-</tr>
-  </table>
+      <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur
+        developpeur Industrie 4.0 </h3>
 
-  </footer>
+      <table id="footer">
+        <tr>
+          <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Gaelle Fougère sur LinkedIn" border="0"
+                alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
+
+          <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Sandrine Prévot sur LinkedIn" border="0"
+                alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
+        </tr>
+      </table>
+
+    </footer>
 
   </div>
 </body>
