--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
       <div id="img_banner"> </div>
       <div id="header_info">
         <span>Page en cours >> contact </span>
-        <a href="accueil.html" title="cliquez pour lire plus" id="button_forward"> <button class = "btn" type="button"> article
+        <a href="index.html" title="cliquez pour lire plus" id="button_forward"> <button class="btn" type="button">
+            article
             suivant </button></a>
       </div>
     </header>
@@ -22,12 +23,12 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="accueil.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="plm.html">PLM</a></li>
           <li><a href="iot.html">IIOT</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </div>
       <div>
         <img src="images/chaplin.jpeg" alt="chaplin" width="90%">
         <audio src="images/proud_music_Just_a_Man_with_a_Smile_(95-125bpm)_preview.mp3" type="audio/mp3"
@@ -77,35 +78,42 @@
 
 
 
-    <section id="section_main"> 
-<div> <img src="images/inetum.jpg" alt="Inetum" width="90%"> </div>
+    <section id="section_main">
+      <div> <img src="images/inetum.jpg" alt="Inetum" width="90%"> </div>
 
-<h2  class="inetum"> Inetum, votre maître d&#039;œuvre 4.0 pour la transformation industrielle</h2>
-                            <p class="card-subtitle">
-                <ul>
-<li>Associer les enjeux industriels aux leviers digitaux et aux programmes d'accompagnement</li>
-<li>Assemblez des blocs appropriés avec un écosystème diversifié</li>
-<li>Prise en charge de la mise à l'échelle avec le réseau de déploiement et les services régionaux</li>
-</ul>
+      <h2 class="inetum"> Inetum, votre maître d&#039;œuvre 4.0 pour la transformation industrielle</h2>
+      <p class="card-subtitle">
+      <ul>
+        <li>Associer les enjeux industriels aux leviers digitaux et aux programmes d'accompagnement</li>
+        <li>Assemblez des blocs appropriés avec un écosystème diversifié</li>
+        <li>Prise en charge de la mise à l'échelle avec le réseau de déploiement et les services régionaux</li>
+      </ul>
 
-              </p>
+      </p>
 
     </section>
 
 
     <footer>
-      
-<!-- debut du footer-->
-  
-  <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur developpeur Industrie 4.0 </h3>
-  
-  <table  id="footer">
-<tr>
-              <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Gaelle Fougère sur LinkedIn" border="0" alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
 
-              <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Sandrine Prévot sur LinkedIn" border="0" alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
-</tr>
-  </table>
+      <!-- debut du footer-->
+
+      <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur
+        developpeur Industrie 4.0 </h3>
+
+      <table id="footer">
+        <tr>
+          <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Gaelle Fougère sur LinkedIn" border="0"
+                alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
+
+          <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Sandrine Prévot sur LinkedIn" border="0"
+                alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
+        </tr>
+      </table>
 
     </footer>
   </div>
