--- a/iot.html
+++ b/iot.html
@@ -15,7 +15,8 @@
       <div id="header_info">
         <div>
           <span>Page en cours : >> IIOT</span>
-          <a href="contact.html" title="cliquez pour lire plus" id="button_forward"> <button class = "btn" type="button"> article
+          <a href="contact.html" title="cliquez pour lire plus" id="button_forward"> <button class="btn" type="button">
+              article
               suivant
             </button></a>
         </div>
@@ -26,14 +27,14 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="accueil.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="plm.html">PLM</a></li>
           <li class="active"><a href="iot.html">IIOT</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
-         <div>
+      <div>
         <img src="images/chaplin.jpeg" alt="chaplin" width="90%">
         <audio src="images/proud_music_Just_a_Man_with_a_Smile_(95-125bpm)_preview.mp3" type="audio/mp3"
           controls></audio>
@@ -146,18 +147,25 @@
         franchement convaincante. </p>
     </section>
     <footer>
-      
-      <!-- debut du footer-->
-  
-  <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur developpeur Industrie 4.0 </h3>
-  
-  <table  id="footer">
-<tr>
-              <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Gaelle Fougère sur LinkedIn" border="0" alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
 
-              <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Sandrine Prévot sur LinkedIn" border="0" alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
-</tr>
-  </table>
+      <!-- debut du footer-->
+
+      <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur
+        developpeur Industrie 4.0 </h3>
+
+      <table id="footer">
+        <tr>
+          <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Gaelle Fougère sur LinkedIn" border="0"
+                alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
+
+          <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Sandrine Prévot sur LinkedIn" border="0"
+                alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
+        </tr>
+      </table>
     </footer>
   </div>
 </body>
