--- a/plm.html
+++ b/plm.html
@@ -13,7 +13,7 @@
       <div id="img_banner"> </div>
       <div id="header_info">
         <span>Page en cours >> PLM</span>
-        <a href="iot.html" title="cliquez pour lire plus" id="button_forward"> <button class = "btn" type="button">article
+        <a href="iot.html" title="cliquez pour lire plus" id="button_forward"> <button class="btn" type="button">article
             suivant </button></a>
       </div>
     </header>
@@ -22,7 +22,7 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="accueil.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li class="active"><a href="plm.html">PLM</a></li>
           <li><a href="iot.html">IIOT</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -120,18 +120,25 @@
     </section>
 
     <footer>
-      
-      <!-- debut du footer-->
-  
-  <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur developpeur Industrie 4.0 </h3>
-  
-  <table  id="footer">
-<tr>
-              <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Gaelle Fougère sur LinkedIn" border="0" alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
 
-              <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale=" width="100" height="20" title= " Voir le profil de Sandrine Prévot sur LinkedIn" border="0" alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
-</tr>
-  </table>
+      <!-- debut du footer-->
+
+      <h3> &copy; Copyright 2022 <strong> Gaelle Fougère & Sandrine Prevot </strong> - Fitec /Inetum : Concepteur
+        developpeur Industrie 4.0 </h3>
+
+      <table id="footer">
+        <tr>
+          <td><a href="https://www.linkedin.com/in/gaelle-fougere "><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Gaelle Fougère sur LinkedIn" border="0"
+                alt="Voir le profil de Gaelle Fougère sur LinkedIn"> </a> </td>
+
+          <td><a href="http://fr.linkedin.com/in/sandrineprevot"><img
+                src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15_fr_FR.png?locale="
+                width="100" height="20" title=" Voir le profil de Sandrine Prévot sur LinkedIn" border="0"
+                alt="Voir le profil de Sandrine Prévot sur LinkedIn"> </a></td>
+        </tr>
+      </table>
 
     </footer>
   </div>
