--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <nav>
       <div>
         <h4> MENU </h4>
+        <p>vvvvvvvvvvvvvvvvvv</p>
         <ul>
           <li><a href="accueil.html">Accueil</a></li>
           <li><a href="plm.html">PLM</a></li>
