--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,11 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="plm.html">PLM</a></li>
-          <li><a href="iot.html">IIOT</a></li>
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <a href="index.html"><li>Accueil</li> </a>
+          <a href="plm.html"><li> PLM</li></a>
+          <a href="iot.html"><li>IIOT</li></a>
+          <a href="contact.html"><li class="active">Contact</li></a>
+
         </ul>
       </div>
       <div>
