--- a/iot.html
+++ b/iot.html
@@ -27,10 +27,10 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="plm.html">PLM</a></li>
-          <li class="active"><a href="iot.html">IIOT</a></li>
-          <li><a href="contact.html">Contact</a></li>
+                  <a href="index.html"><li>Accueil</li> </a>
+          <a href="plm.html"><li> PLM</li></a>
+          <a href="iot.html"><li class="active">IIOT</li></a>
+          <a href="contact.html"><li>Contact</li></a>
         </ul>
       </div>
 
