--- a/plm.html
+++ b/plm.html
@@ -22,10 +22,10 @@
       <div>
         <h4> MENU </h4>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li class="active"><a href="plm.html">PLM</a></li>
-          <li><a href="iot.html">IIOT</a></li>
-          <li><a href="contact.html">Contact</a></li>
+        <a href="index.html"><li>Accueil</li> </a>
+          <a href="plm.html"><li class="active"> PLM</li></a>
+          <a href="iot.html"><li >IIOT</li></a>
+          <a href="contact.html"><li>Contact</li></a>
         </ul>
       </div>
       <div id="nav_audio">
